# resvg

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  deno.json  mod.ts  options.ts  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: index.md
examples/: _helpers.ts  banner.ts  brotli-fonts.ts  css-and-fonts.ts  custom-fonts.ts  icons.ts  render_samples.bench.ts  render_terminal_samples.ts
fonts/Bitter/: Bitter-Bold.ttf.br  Bitter-Regular.ttf.br
fonts/Decimal/: Decimal-Black.ttf.br  Decimal-Bold.ttf.br  Decimal-Book.ttf.br  Decimal-BookItalic.ttf.br  Decimal-Thin.ttf.br  Decimal-ThinItalic.ttf.br  Decimal-Ultra.ttf.br  Decimal-UltraItalic.ttf.br
fonts/Gotham/: GothamNarrSSm-Black.otf.br  GothamNarrSSm-BlackItalic.otf.br  GothamNarrSSm-Bold.otf.br  GothamNarrSSm-BoldItalic.otf.br  GothamNarrSSm-Book.otf.br  GothamNarrSSm-BookItalic.otf.br  GothamNarrSSm-Light.otf.br  GothamNarrSSm-LightItalic.otf.br  GothamNarrSSm-Medium.otf.br  GothamNarrSSm-MediumItalic.otf.br  GothamNarrSSm-XLight.otf.br  GothamNarrSSm-XLightItalic.otf.br
fonts/Inkwell/: InkwellBlackletter-Bold.otf.br  InkwellBlackletter-Book.otf.br  InkwellScript-Book.otf.br
fonts/Inter/: Inter-Bold.ttf.br  Inter-Regular.ttf.br
fonts/JetBrainsMono/: JetBrainsMono-VariableFont_wght.ttf.br
fonts/Numbers/: Numbers-Bayside.otf.br  Numbers-Claimcheck.otf.br  Numbers-Delancey.otf.br  Numbers-Depot.otf.br  Numbers-Deuce.otf.br  Numbers-Dividend.otf.br  Numbers-Greenback.otf.br  Numbers-Indicia.otf.br  Numbers-Premium.otf.br  Numbers-Prospekt.otf.br  Numbers-Redbird.otf.br  Numbers-Revenue.otf.br  Numbers-Strasse.otf.br  Numbers-Trafalgar.otf.br  Numbers-ValutaOpen.otf.br  Numbers-ValutaSolid.otf.br  Numbers.ttc  Numbers.ttc.br
fonts/Obsidian/: Obsidian-Italic.otf.br  Obsidian-Roman.otf.br
fonts/OperatorMonoNerd/: OperatorMonoNerd-Book.ttf.br  OperatorMonoNerd-Italic.ttf.br
fonts/Sentinel/: SentinelSSm-Bold.otf.br  SentinelSSm-BoldItalic.otf.br  SentinelSSm-Book.otf.br  SentinelSSm-BookItalic.otf.br
lib/: brocha.d.ts  brocha.js  resvg.d.ts  resvg.internal.js  resvg.js
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs  options.rs  renderer.rs
rs_lib/src/fonts/: font_database.rs  font_face.rs  font_families.rs  mod.rs
rs_lib/src/macros/: console.rs  get.rs  impl_from_enum.rs  impl_from_numeric.rs  impl_linked_enum.rs  mod.rs  set.rs
rs_lib/src/options/: rendering_enums.rs  size.rs
rs_lib/src/utils/: brotli.rs  mod.rs  test_util.rs
scripts/: compress.ts
tests/: render.test.ts
